# seq2science

./: .buildinfo  .flake8  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.html  GSM2219688_mqc.out  LICENSE  README.md  Snakefile  bigNarrowPeak.as  faq.html  fillingout.html  fillingoutconfig.html  fillingoutsamples.html  genindex.html  gettingstarted.html  home.html  index.html  objects.inv  pyproject.toml  requirements.yaml  results.html  schemas.html  search.html  searchindex.js  setup.py  sth.py  travis.yml  workflows.html
.doctrees/: CONTRIBUTING.doctree  environment.pickle  faq.doctree  fillingout.doctree  fillingoutconfig.doctree  fillingoutsamples.doctree  gettingstarted.doctree  home.doctree  index.doctree  results.doctree  schemas.doctree  workflows.doctree
.github/: CODEOWNERS  pull_request_template.md  stale.yaml  stale.yml
Jenkins/: Jenkinsfile  conda-bot.Jenkinsfile  conda-bot.py  set_github_status.sh
_sources/: CONTRIBUTING.md.txt  faq.md.txt  fillingout.md.txt  fillingoutsamples.md.txt  home.md.txt  index.rst.txt  schemas.md.txt  workflows.md.txt
conda_bot/: bot.py  conda-env-bot.2019-09-11.private-key.pem
content/: CHANGELOG.html  DESeq2.html  all_rules.html  cli.html  extensive_docs.html  extracontent.html  faq.html  fillingout.html  gettingstarted.html  home.html  multiqc.html  results.html  scATAC_postprocessing.html  schemas.html  seq2science_profiles.html  workflows.html
docs/: CONTRIBUTING.md  conf.py  fillingout.md  fillingoutconfig.md  gettingstarted.md  index.rst  schemas.py  workflows.md
envs/: Snaptools.yml  alignment.yaml  alignmentsieve.yaml  annotation_scATAC.yml  assembly_hub.yaml  bedtools.yaml  bowtie2.yaml  bwa.yaml  call_peak.yaml  call_peak_macs2.yaml  conda-bot.yaml  decoy.yaml  deseq2.yaml  gene_counts.yaml  genrich.yaml  get_fastq.yaml  get_genome.yaml  gimme.yaml  hisat2.yaml  hisat2.yml  hmmratac.yaml  ignore.txt  macs2.yaml  mtnucratio.yaml  picard.yaml  plate_sort.yml  qc.yaml  rmv_dup_readnames_fastq.yml  salmon.yaml  sambamba.yaml  samtools.yaml  snakemake-workflows.yaml  snaptools.yaml  star.yaml  subread.yaml  trim_auto.yaml  trimgalore.yaml  txi.yaml  ucsc.yaml
imgs/: cmd.txt
(+613 files in other folders)
