[project]
name = "seq2science"
packages = ["seq2science"]
package_data = "{'seq2science':['envs/*', 'rules/*', 'schemas/*', 'schemas/*/*', 'scripts/*', 'workflows/*/*']}"
include_package_data = true
description = "seq2science: easy pre-processing of ngs data."
author = [
    "Maarten van der Sande <M.vanderSande@science.ru.nl>"]
license = "MIT"
license_file = "LICENSE"
url = "https://vanheeringen-lab.github.io/seq2science"
scripts = ["bin/seq2science"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]

python_requires = ">3.6"

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

# flake8 does not support pyproject.toml (yet?!)
# [flake8] ...
